ISSTA-2023-AE/data/Evaluation/EVALUATION-VIA-CONTROLLED-EXPERIMENTS/Bug-finding-trails/PolyGlot/llvm/set-3/file_polyglot_011245.c.log
user42@srg01:~/git/directed-compiler-fuzzing-code/scripts/set-3$ (ulimit -St 45 -Sf 90000; clang-12 -w -O2 -pedantic file_polyglot_011245.c)
file_polyglot_011245.c:2:9: error: expression is not an integer constant expression
 X1 = ( x ( ) ) , X2 , X3 , X4 }
      ~~^~~~~~~
file_polyglot_011245.c:2:33: error: expected ';' after enum
 X1 = ( x ( ) ) , X2 , X3 , X4 }
                                ^
                                ;
file_polyglot_011245.c:4:14: error: redefinition of 'X'
 extern enum X {
             ^
file_polyglot_011245.c:1:6: note: previous definition is here
enum X {
     ^
file_polyglot_011245.c:5:14: error: expression is not assignable
 myrnd = x() ++ , X2 , X1 = 1 , X4 }
         ~~~ ^
PLEASE submit a bug report to https://bugs.llvm.org/ and include the crash backtrace, preprocessed source, and associated run script.
Stack dump:
0.	Program arguments: /usr/lib/llvm-12/bin/clang -cc1 -triple x86_64-pc-linux-gnu -emit-obj --mrelax-relocations -disable-free -disable-llvm-verifier -discard-value-names -main-file-name file_polyglot_011245.c -mrelocation-model static -mframe-pointer=none -fmath-errno -fno-rounding-math -mconstructor-aliases -munwind-tables -target-cpu x86-64 -tune-cpu generic -fno-split-dwarf-inlining -debugger-tuning=gdb -resource-dir /usr/lib/llvm-12/lib/clang/12.0.1 -internal-isystem /usr/local/include -internal-isystem /usr/lib/llvm-12/lib/clang/12.0.1/include -internal-externc-isystem /usr/include/x86_64-linux-gnu -internal-externc-isystem /include -internal-externc-isystem /usr/include -O2 -pedantic -w -fdebug-compilation-dir /home/user42/git/directed-compiler-fuzzing-code/scripts/set-3 -ferror-limit 19 -fgnuc-version=4.2.1 -fcolor-diagnostics -vectorize-loops -vectorize-slp -faddrsig -o /tmp/file_polyglot_011245-71f916.o -x c file_polyglot_011245.c
1.	file_polyglot_011245.c:5:22: current parser token ','
#0 0x00007f790204a001 llvm::sys::PrintStackTrace(llvm::raw_ostream&, int) (/usr/lib/x86_64-linux-gnu/libLLVM-12.so.1+0xd1a001)
#1 0x00007f7902048140 llvm::sys::RunSignalHandlers() (/usr/lib/x86_64-linux-gnu/libLLVM-12.so.1+0xd18140)
#2 0x00007f790204a712 (/usr/lib/x86_64-linux-gnu/libLLVM-12.so.1+0xd1a712)
#3 0x00007f7909c60980 __restore_rt (/lib/x86_64-linux-gnu/libpthread.so.0+0x12980)
#4 0x00007f79078cad07 clang::ASTContext::getAsArrayType(clang::QualType) const (/usr/lib/x86_64-linux-gnu/libclang-cpp.so.12+0xa1dd07)
#5 0x00000000016bbd20 
clang: error: unable to execute command: Segmentation fault
clang: error: clang frontend command failed due to signal (use -v to see invocation)
Ubuntu clang version 12.0.1-++20211102090516+fed41342a82f-1~exp1~20211102211019.11
Target: x86_64-pc-linux-gnu
Thread model: posix
InstalledDir: /usr/bin
clang: note: diagnostic msg: 
********************

PLEASE ATTACH THE FOLLOWING FILES TO THE BUG REPORT:
Preprocessed source(s) and associated run script(s) are located at:
clang: note: diagnostic msg: /tmp/file_polyglot_011245-dfe09b.c
clang: note: diagnostic msg: /tmp/file_polyglot_011245-dfe09b.sh
clang: note: diagnostic msg: 

********************
user42@srg01:~/git/directed-compiler-fuzzing-code/scripts/set-3$ more file_polyglot_011245.c
enum X {
 X1 = ( x ( ) ) , X2 , X3 , X4 }
 long ;
 extern enum X {
 myrnd = x() ++ , X2 , X1 = 1 , X4 }
 long test = 0 ;
 static void y ( int ) ;
 int main ( ) {
 switch ( test ) {
 struct x {
 int x ;
 }
 ;
 }
 return 0 ;
 }
 static void y ( int x ) {
 abort ( ) ;
 }
 
user42@srg01:~/git/directed-compiler-fuzzing-code/scripts/set-3$ gcc file_polyglot_011245.c
file_polyglot_011245.c:2:9: warning: implicit declaration of function 'x' [-Wimplicit-function-declaration]
    2 |  X1 = ( x ( ) ) , X2 , X3 , X4 }
      |         ^
file_polyglot_011245.c:2:2: error: enumerator value for 'X1' is not an integer constant
    2 |  X1 = ( x ( ) ) , X2 , X3 , X4 }
      |  ^~
file_polyglot_011245.c:3:2: error: expected ';', identifier or '(' before 'long'
    3 |  long ;
      |  ^~~~
file_polyglot_011245.c:3:2: warning: useless type name in empty declaration
file_polyglot_011245.c:4:14: error: redeclaration of 'enum X'
    4 |  extern enum X {
      |              ^
file_polyglot_011245.c:1:6: note: originally defined here
    1 | enum X {
      |      ^
file_polyglot_011245.c:5:14: error: lvalue required as increment operand
    5 |  myrnd = x() ++ , X2 , X1 = 1 , X4 }
      |              ^~
file_polyglot_011245.c:5:19: error: redeclaration of enumerator 'X2'
    5 |  myrnd = x() ++ , X2 , X1 = 1 , X4 }
      |                   ^~
file_polyglot_011245.c:2:19: note: previous definition of 'X2' was here
    2 |  X1 = ( x ( ) ) , X2 , X3 , X4 }
      |                   ^~
file_polyglot_011245.c:5:24: error: redeclaration of enumerator 'X1'
    5 |  myrnd = x() ++ , X2 , X1 = 1 , X4 }
      |                        ^~
file_polyglot_011245.c:2:2: note: previous definition of 'X1' was here
    2 |  X1 = ( x ( ) ) , X2 , X3 , X4 }
      |  ^~
file_polyglot_011245.c:5:33: error: redeclaration of enumerator 'X4'
    5 |  myrnd = x() ++ , X2 , X1 = 1 , X4 }
      |                                 ^~
file_polyglot_011245.c:2:29: note: previous definition of 'X4' was here
    2 |  X1 = ( x ( ) ) , X2 , X3 , X4 }
      |                             ^~
file_polyglot_011245.c:6:2: error: expected ';', identifier or '(' before 'long'
    6 |  long test = 0 ;
      |  ^~~~
file_polyglot_011245.c: In function 'y':
file_polyglot_011245.c:18:2: warning: implicit declaration of function 'abort' [-Wimplicit-function-declaration]
   18 |  abort ( ) ;
      |  ^~~~~
file_polyglot_011245.c:18:2: warning: incompatible implicit declaration of built-in function 'abort'
file_polyglot_011245.c:1:1: note: include '<stdlib.h>' or provide a declaration of 'abort'
  +++ |+#include <stdlib.h>
    1 | enum X {
